--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -199,40 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">Monday 4/03/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">88 - 1 - 48 - 36 - 11</p>
-                <p class="machine">83 - 47 - 19 - 60 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">26 - 75 - 46 - 16 - 62</p>
-                <p class="machine">13 - 8 - 59 - 33 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">76 - 16 - 33 - 24 - 6</p>
-                <p class="machine">87 - 41 - 80 - 60 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">49 - 29 - 12 - 8 - 42</p>
-                <p class="machine">74 - 58 - 36 - 41 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">21 - 16 - 36 - 19 - 82</p>
-                <p class="machine">55 - 15 - 61 - 84 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">47 - 36 - 83 - 49 - 30</p>
-                <p class="machine">48 - 58 - 82 - 9 - 33</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 5/03/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -263,6 +229,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">85 - 50 - 15 - 38 - 51</p>
                 <p class="machine">40 - 87 - 75 - 29 - 90</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 06/3/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">82 - 79 - 50 - 84 - 15</p>
+                <p class="machine">9 - 2 - 71 - 18 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">57 - 39 - 24 - 3 - 31</p>
+                <p class="machine">30 - 28 - 72 - 41 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">19 - 5 - 4 - 80 - 53</p>
+                <p class="machine">72 - 57 - 51 - 63 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">1 - 86 - 2 - 43 - 58</p>
+                <p class="machine">41 - 74 - 75 - 37 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">15 - 9 - 43 - 84 - 65</p>
+                <p class="machine">21 - 50 - 12 - 11 - 88</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
