--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,7 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="two days ago result">
-            <h2 class="date">tuesday 5/03/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">23 - 42 - 50 - 71 - 5</p>
-                <p class="machine">66 - 61 - 22 - 15 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">12 - 48 - 43 - 13 - 46</p>
-                <p class="machine">81 - 51 - 75 - 37 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">85 - 87 - 66 - 67 - 42</p>
-                <p class="machine">36 - 26 - 40 - 46 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">50 - 43 - 88 - 63 - 16</p>
-                <p class="machine">47 - 64 - 79 - 75 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">83 - 55 - 78 - 82 - 44</p>
-                <p class="machine">51 - 62 - 73 - 75 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">85 - 50 - 15 - 38 - 51</p>
-                <p class="machine">40 - 87 - 75 - 29 - 90</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
+        <section aria-label="two days ago results">
             <h2 class="date">wednesday 06/3/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -259,10 +225,44 @@
                 <p class="winning">15 - 9 - 43 - 84 - 65</p>
                 <p class="machine">21 - 50 - 12 - 11 - 88</p>        
             </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 07/3/2024</h2>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">People</h3>
+                <p class="winning">66 - 85 - 86 - 49 - 33</p>
+                <p class="machine">74 - 4 - 57 - 28 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">65 - 24 - 52 - 22 - 86</p>
+                <p class="machine">5 - 59 - 13 - 63 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">60 - 53 - 73 - 89 - 66</p>
+                <p class="machine">74 - 75 - 55 - 42 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">88 - 43 - 45 - 50 - 26</p>
+                <p class="machine">51 - 32 - 71 - 39 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">43 - 66 - 18 - 22 - 59</p>
+                <p class="machine">67 - 75 - 61 - 77 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">14 - 34 - 76 - 17 - 39</p>
+                <p class="machine">5 - 25 - 11 - 50 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">61 - 56 - 82 - 63 - 2</p>
+                <p class="machine">17 - 11 - 29 - 62 - 55</p>        
             </article>
         </section>
     </div>
