--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
+        <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Result | Baba Ijebu</title>
-
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
-    <!-- End Google Tag Manager -->
 
     <!-- <meta property="og:title" content="Visual Lotto Board">
     <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT"> -->
@@ -199,35 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">wednesday 06/3/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">82 - 79 - 50 - 84 - 15</p>
-                <p class="machine">9 - 2 - 71 - 18 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">57 - 39 - 24 - 3 - 31</p>
-                <p class="machine">30 - 28 - 72 - 41 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">19 - 5 - 4 - 80 - 53</p>
-                <p class="machine">72 - 57 - 51 - 63 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">1 - 86 - 2 - 43 - 58</p>
-                <p class="machine">41 - 74 - 75 - 37 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">15 - 9 - 43 - 84 - 65</p>
-                <p class="machine">21 - 50 - 12 - 11 - 88</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 07/3/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -263,6 +234,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">61 - 56 - 82 - 63 - 2</p>
                 <p class="machine">17 - 11 - 29 - 62 - 55</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 08/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">27 - 7 - 86 - 10 - 47</p>
+                <p class="machine">41 - 62 - 21 - 5 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">12 - 60 - 77 - 56 - 62</p>
+                <p class="machine">90 - 67 - 63 - 37 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">81 - 25 - 40 - 37 - 10</p>
+                <p class="machine">79 - 22 - 12 - 29 - 61</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">68 - 49 - 34 - 38 - 12</p>
+                <p class="machine">40 - 51 - 43 - 88 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">39 - 12 - 81 - 65 - 82</p>
+                <p class="machine">90 - 52 - 40 - 51 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">43 - 16 - 2 - 33 - 39</p>
+                <p class="machine">57 - 53 - 79 - 67 - 41</p>        
             </article>
         </section>
     </div>
