--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -199,45 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">thursday 07/3/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">66 - 85 - 86 - 49 - 33</p>
-                <p class="machine">74 - 4 - 57 - 28 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">65 - 24 - 52 - 22 - 86</p>
-                <p class="machine">5 - 59 - 13 - 63 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">60 - 53 - 73 - 89 - 66</p>
-                <p class="machine">74 - 75 - 55 - 42 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">88 - 43 - 45 - 50 - 26</p>
-                <p class="machine">51 - 32 - 71 - 39 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">43 - 66 - 18 - 22 - 59</p>
-                <p class="machine">67 - 75 - 61 - 77 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">14 - 34 - 76 - 17 - 39</p>
-                <p class="machine">5 - 25 - 11 - 50 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">61 - 56 - 82 - 63 - 2</p>
-                <p class="machine">17 - 11 - 29 - 62 - 55</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 08/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -268,6 +229,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">43 - 16 - 2 - 33 - 39</p>
                 <p class="machine">57 - 53 - 79 - 67 - 41</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 09/3/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">45 - 83 - 59 - 43 - 68</p>
+                <p class="machine">80 - 23 - 84 - 7 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">9 - 85 - 70 - 72 - 23</p>
+                <p class="machine">22 - 16 - 39 - 81 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">75 - 69 - 89 - 64 - 66</p>
+                <p class="machine">72 - 88 - 46 - 52 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">45 - 68 - 5 - 79 - 60</p>
+                <p class="machine">61 - 11 - 73 - 50 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">54 - 59 - 63 - 28 - 20</p>
+                <p class="machine">56 - 71 - 44 - 41 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">12 - 23 - 19 - 34 - 7</p>
+                <p class="machine">59 - 87 - 74 - 75 - 58</p>        
             </article>
         </section>
     </div>
