--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -199,40 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">friday 08/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">27 - 7 - 86 - 10 - 47</p>
-                <p class="machine">41 - 62 - 21 - 5 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">12 - 60 - 77 - 56 - 62</p>
-                <p class="machine">90 - 67 - 63 - 37 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">81 - 25 - 40 - 37 - 10</p>
-                <p class="machine">79 - 22 - 12 - 29 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">68 - 49 - 34 - 38 - 12</p>
-                <p class="machine">40 - 51 - 43 - 88 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">39 - 12 - 81 - 65 - 82</p>
-                <p class="machine">90 - 52 - 40 - 51 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">43 - 16 - 2 - 33 - 39</p>
-                <p class="machine">57 - 53 - 79 - 67 - 41</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 09/3/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -263,6 +229,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">12 - 23 - 19 - 34 - 7</p>
                 <p class="machine">59 - 87 - 74 - 75 - 58</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 10/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">51 - 35 - 79 - 18 - 73</p>
+                <p class="machine">47 - 53 - 66 - 64 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">90 - 38 - 48 - 15 - 84</p>
+                <p class="machine">7 - 30 - 6 - 14 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">30 - 28 - 60 - 45 - 6</p>
+                <p class="machine">56 - 71 - 83 - 24 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">89 - 72 - 1 - 4 - 87</p>
+                <p class="machine">49 - 82 - 6 - 86 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">81 - 43 - 42 - 73 - 70</p>
+                <p class="machine">64 - 12 - 2 - 52 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">5 - 25 - 21 - 80 - 32</p>
+                <p class="machine">3 - 47 - 54 - 71 - 81</p>        
             </article>
         </section>
     </div>
@@ -468,18 +468,5 @@
             </tbody>
         </table>
     </div>
-    
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
-    <!-- Source -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-3639147338737274"
-        data-ad-slot="9690547982"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>   
 </body>
 </html>
