--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+         <!-- Google Tag Manager -->
+         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
+            <!-- End Google Tag Manager -->
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
@@ -24,13 +32,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
 
-         <!-- Google Tag Manager -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
-        <!-- End Google Tag Manager -->
     </head>
     <body>
 
@@ -200,7 +201,7 @@
                         <!-- footer-->
         <footer>
             <p>Created & Manage <br> By <br> Hologuti Business Centre</p>
-            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" width="100px" aria-hidden="true"></a>
+            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/wjq0TBDq/of-HBC-Logo.webp" width="100px" aria-hidden="true"></a>
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
                 <a href="#" class="team">Team</a>
@@ -220,22 +221,6 @@
                 </div>
             </div>
         </footer>
-
-        <div class="goggleAd" inert>
-            <script src="script.js"></script>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
-            <!-- Source -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-3639147338737274"
-                data-ad-slot="9690547982"
-                data-ad-format="auto"
-                data-full-width-responsive="true">
-            </ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div> 
     </body>
 </html>
         
