--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,7 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="two days ago results">
-            <h2 class="date">saturday 09/3/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">45 - 83 - 59 - 43 - 68</p>
-                <p class="machine">80 - 23 - 84 - 7 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">9 - 85 - 70 - 72 - 23</p>
-                <p class="machine">22 - 16 - 39 - 81 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">75 - 69 - 89 - 64 - 66</p>
-                <p class="machine">72 - 88 - 46 - 52 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">45 - 68 - 5 - 79 - 60</p>
-                <p class="machine">61 - 11 - 73 - 50 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">54 - 59 - 63 - 28 - 20</p>
-                <p class="machine">56 - 71 - 44 - 41 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">12 - 23 - 19 - 34 - 7</p>
-                <p class="machine">59 - 87 - 74 - 75 - 58</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
+        <section>
             <h2 class="date">sunday 10/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -263,6 +229,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">5 - 25 - 21 - 80 - 32</p>
                 <p class="machine">3 - 47 - 54 - 71 - 81</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 11/3/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">19 - 49 - 3 - 11 - 36</p>
+                <p class="machine">81 - 27 - 12 - 41 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">67 - 5 - 72 - 50 - 27</p>
+                <p class="machine">62 - 74 - 10 - 30 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">29 - 55 - 70 - 3 - 50</p>
+                <p class="machine">78 - 89 - 45 - 57 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">40 - 46 - 74 - 65 - 20</p>
+                <p class="machine">83 - 78 - 19 - 8 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">64 - 17 - 88 - 58 - 10</p>
+                <p class="machine">56 - 44 - 29 - 34 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">76 - 54 - 32 - 21 - 17</p>
+                <p class="machine">60 - 59 - 43 - 83 - 41</p>        
             </article>
         </section>
     </div>
