--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,7 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section>
-            <h2 class="date">sunday 10/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">51 - 35 - 79 - 18 - 73</p>
-                <p class="machine">47 - 53 - 66 - 64 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">90 - 38 - 48 - 15 - 84</p>
-                <p class="machine">7 - 30 - 6 - 14 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">30 - 28 - 60 - 45 - 6</p>
-                <p class="machine">56 - 71 - 83 - 24 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">89 - 72 - 1 - 4 - 87</p>
-                <p class="machine">49 - 82 - 6 - 86 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">81 - 43 - 42 - 73 - 70</p>
-                <p class="machine">64 - 12 - 2 - 52 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">5 - 25 - 21 - 80 - 32</p>
-                <p class="machine">3 - 47 - 54 - 71 - 81</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
+        <section aria-label="two days ago result">
             <h2 class="date">monday 11/3/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -263,6 +229,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">76 - 54 - 32 - 21 - 17</p>
                 <p class="machine">60 - 59 - 43 - 83 - 41</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 12/3/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">43 - 85 - 20 - 18 - 49</p>
+                <p class="machine">32 - 21 - 4 - 6 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">54 - 61 - 77 - 47 - 31</p>
+                <p class="machine">9 - 38 - 58 - 33 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">61 - 28 - 37 - 63 - 49</p>
+                <p class="machine">48 - 57 - 34 - 80 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">88 - 68 - 21 - 59 - 66</p>
+                <p class="machine">47 - 30 - 45 - 72 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY G</h3>
+                <p class="winning">4 - 53 - 43 - 41 - 32</p>
+                <p class="machine">78 - 77 - 73 - 52 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">47 - 3 - 84 - 23 - 56</p>
+                <p class="machine">82 - 10 - 87 - 29 - 61</p>        
             </article>
         </section>
     </div>
