--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -199,40 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 11/3/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">19 - 49 - 3 - 11 - 36</p>
-                <p class="machine">81 - 27 - 12 - 41 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">67 - 5 - 72 - 50 - 27</p>
-                <p class="machine">62 - 74 - 10 - 30 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">29 - 55 - 70 - 3 - 50</p>
-                <p class="machine">78 - 89 - 45 - 57 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">40 - 46 - 74 - 65 - 20</p>
-                <p class="machine">83 - 78 - 19 - 8 - 21</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">64 - 17 - 88 - 58 - 10</p>
-                <p class="machine">56 - 44 - 29 - 34 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">76 - 54 - 32 - 21 - 17</p>
-                <p class="machine">60 - 59 - 43 - 83 - 41</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 12/3/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -263,6 +229,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">47 - 3 - 84 - 23 - 56</p>
                 <p class="machine">82 - 10 - 87 - 29 - 61</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 13/03/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">13 - 53 - 71 - 5 - 81</p>
+                <p class="machine">70 - 90 - 69 - 49 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">47 - 72 - 56 - 86 - 17</p>
+                <p class="machine">90 - 54 - 21 - 13 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">29 - 46 - 39 - 34 - 2</p>
+                <p class="machine">43 - 82 - 14 - 19 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">22 - 33 - 21 - 80 - 46</p>
+                <p class="machine">42 - 69 - 66 - 63 - 53</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">13 - 30 - 48 - 24 - 29</p>
+                <p class="machine">73 - 1 - 60 - 47 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">73 - 88 - 79 - 29 - 17</p>
+                <p class="machine">75 - 78 - 52 - 42 - 58</p>        
             </article>
         </section>
     </div>
