--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -21,7 +21,6 @@
 
     <link rel="canonical" href="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <style>
         header {
             margin: 2rem;
@@ -199,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 12/3/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">43 - 85 - 20 - 18 - 49</p>
-                <p class="machine">32 - 21 - 4 - 6 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">54 - 61 - 77 - 47 - 31</p>
-                <p class="machine">9 - 38 - 58 - 33 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">61 - 28 - 37 - 63 - 49</p>
-                <p class="machine">48 - 57 - 34 - 80 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">88 - 68 - 21 - 59 - 66</p>
-                <p class="machine">47 - 30 - 45 - 72 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY G</h3>
-                <p class="winning">4 - 53 - 43 - 41 - 32</p>
-                <p class="machine">78 - 77 - 73 - 52 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">47 - 3 - 84 - 23 - 56</p>
-                <p class="machine">82 - 10 - 87 - 29 - 61</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 13/03/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -263,6 +228,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">73 - 88 - 79 - 29 - 17</p>
                 <p class="machine">75 - 78 - 52 - 42 - 58</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 14/3/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">23 - 74 - 82 - 24 - 48</p>
+                <p class="machine">29 - 21 - 33 - 36 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">45 - 71 - 6 - 16 - 85</p>
+                <p class="machine">73 - 7 - 75 - 64 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">65 - 60 - 55 - 22 - 49</p>
+                <p class="machine">24 - 46 - 36 - 18 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">66 - 4 - 9 - 61 - 29</p>
+                <p class="machine">57 - 79 - 40 - 59 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">62 - 64 - 73 - 7 - 2</p>
+                <p class="machine">36 - 61 - 89 - 32 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
