--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -254,14 +254,14 @@
                 <p class="machine">57 - 79 - 40 - 59 - 81</p>        
             </article>
             <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">20 - 3 - 69 - 90 - 33</p>
+                <p class="machine">82 - 13 - 89 - 23 - 73</p>        
+            </article>
+            <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">62 - 64 - 73 - 7 - 2</p>
                 <p class="machine">36 - 61 - 89 - 32 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
             </article>
         </section>
     </div>
