--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <div class="navigation">
                     <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
                     <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a>
+                    <a href="https://g.page/r/CcKUCr5g5b_JEBI/review">Content Review</a>
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
                 
@@ -221,6 +222,7 @@
                 </div>
             </div>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
         
