--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 13/03/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">13 - 53 - 71 - 5 - 81</p>
-                <p class="machine">70 - 90 - 69 - 49 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">47 - 72 - 56 - 86 - 17</p>
-                <p class="machine">90 - 54 - 21 - 13 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">29 - 46 - 39 - 34 - 2</p>
-                <p class="machine">43 - 82 - 14 - 19 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">22 - 33 - 21 - 80 - 46</p>
-                <p class="machine">42 - 69 - 66 - 63 - 53</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">13 - 30 - 48 - 24 - 29</p>
-                <p class="machine">73 - 1 - 60 - 47 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">73 - 88 - 79 - 29 - 17</p>
-                <p class="machine">75 - 78 - 52 - 42 - 58</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 14/3/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">62 - 64 - 73 - 7 - 2</p>
                 <p class="machine">36 - 61 - 89 - 32 - 14</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 15/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">10 - 73 - 68 - 76 - 53</p>
+                <p class="machine">43 - 32 - 35 - 42 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">38 - 31 - 47 - 44 - 71</p>
+                <p class="machine">34 - 67 - 27 - 75 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">73 - 46 - 26 - 62 - 18</p>
+                <p class="machine">8 - 67 - 17 - 36 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">54 - 18 - 67 - 9 - 77</p>
+                <p class="machine">49 - 27 - 60 - 5 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">62 - 45 - 18 - 72 - 31</p>
+                <p class="machine">16 - 32 - 24 - 70 - 61</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">8 - 86 - 63 - 57 - 55</p>
+                <p class="machine">32 - 40 - 43 - 33 - 14</p>        
             </article>
         </section>
     </div>
