--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 14/3/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">23 - 74 - 82 - 24 - 48</p>
-                <p class="machine">29 - 21 - 33 - 36 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">45 - 71 - 6 - 16 - 85</p>
-                <p class="machine">73 - 7 - 75 - 64 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">65 - 60 - 55 - 22 - 49</p>
-                <p class="machine">24 - 46 - 36 - 18 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">66 - 4 - 9 - 61 - 29</p>
-                <p class="machine">57 - 79 - 40 - 59 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">20 - 3 - 69 - 90 - 33</p>
-                <p class="machine">82 - 13 - 89 - 23 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">62 - 64 - 73 - 7 - 2</p>
-                <p class="machine">36 - 61 - 89 - 32 - 14</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 15/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">8 - 86 - 63 - 57 - 55</p>
                 <p class="machine">32 - 40 - 43 - 33 - 14</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 16/3/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">39 - 62 - 69 - 87 - 7</p>
+                <p class="machine">25 - 28 - 50 - 64 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">90 - 55 - 18 - 6 - 31</p>
+                <p class="machine">77 - 89 - 59 - 48 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">75 - 86 - 19 - 34 - 41</p>
+                <p class="machine">74 - 10 - 84 - 20 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">35 - 5 - 40 - 02 - 44</p>
+                <p class="machine">55 - 71 - 51 - 38 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">17 - 82 - 65 - 6 - 85</p>
+                <p class="machine">66 - 53 - 13 - 68 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">38 - 33 - 78 - 80 - 81</p>
+                <p class="machine">65 - 77 - 75 - 40 - 83</p>        
             </article>
         </section>
     </div>
