--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">friday 15/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">10 - 73 - 68 - 76 - 53</p>
-                <p class="machine">43 - 32 - 35 - 42 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">38 - 31 - 47 - 44 - 71</p>
-                <p class="machine">34 - 67 - 27 - 75 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">73 - 46 - 26 - 62 - 18</p>
-                <p class="machine">8 - 67 - 17 - 36 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">54 - 18 - 67 - 9 - 77</p>
-                <p class="machine">49 - 27 - 60 - 5 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">62 - 45 - 18 - 72 - 31</p>
-                <p class="machine">16 - 32 - 24 - 70 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">8 - 86 - 63 - 57 - 55</p>
-                <p class="machine">32 - 40 - 43 - 33 - 14</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 16/3/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">38 - 33 - 78 - 80 - 81</p>
                 <p class="machine">65 - 77 - 75 - 40 - 83</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 17/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">64 - 80 - 56 - 6 - 12</p>
+                <p class="machine">37 - 74 - 20 - 36 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">50 - 87 - 69 - 63 - 71</p>
+                <p class="machine">54 - 66 - 57 - 84 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">55 - 45 - 35 - 20 - 53</p>
+                <p class="machine">75 - 24 - 60 - 32 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">45 - 80 - 21 - 66 - 81</p>
+                <p class="machine">5 - 54 - 72 - 28 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">12 - 71 - 9 - 60 - 49</p>
+                <p class="machine">53 - 68 - 90 - 23 - 61 </p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">30 - 27 - 36 - 5 - 24</p>
+                <p class="machine">16 - 81 - 65 - 82 - 17</p>        
             </article>
         </section>
     </div>
