--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div> 
             </nav>
         </header>
-        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 320px; border-radius: 5px; margin: 10px; padding: 20px 0;">
+        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 320px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
             <aside class="review" style="text-align: center; line-height: 1.5;" >
                 <h1>Review</h1>
                 <p style="font-size: 20px;">Kindly take few seconds of your time to rate our content</p>
@@ -211,7 +211,7 @@
 
                 <div class="getInTouch">
                     <span class="span in-touch">Get in Touch</span>
-                    <a href="tel:+2349058206578" class="contact">08059336938</a>
+                    <a href="tel:+2348059336938" class="contact">08059336938</a>
                     <a href="mailto:vlb@hologutibusinesscentre.com" class="contact">vlb@hologutibusinesscentre.com</a>
                 </div>
                 <div class="stayConnected">
