--- a/plan.html
+++ b/plan.html
@@ -208,7 +208,7 @@
                 }
 
                 img {
-                    width: 300px;
+                    min-width: 300px;
                 }
 
                 footer {
@@ -232,44 +232,42 @@
         <nav>
             <a href="/" class="home">Home</a>
         </nav>
-        <!-- <div style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-            <h2 style="color: #fff;">Tota board</h2>
-            <iframe title="Tota past results" src="https://vlb.hologutibusinesscentre.com/GAMES/11Tota.html" width="60%"></iframe>
-        </div> -->
+        <div style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+            <h2 style="color: #fff;">Enugu Board</h2>
+            <iframe title="Enugu past results" src="https://vlb.hologutibusinesscentre.com/GAMES/14Enugu.html" style="width: 100%;"></iframe>
+        </div>
     </header>
     <main>
-        <h1>Please Check Back Some Few Time</h1>
+        <!-- <h1>Please Check Back Some Few Time</h1>
         <h2>All Plans have been closed</h2>
         <p>Nothing To Show Now. 
             <i>But if you have a recent plan you are following through this "PLAN PAGE" and you want us to reopen it, tell us through any of our social media handle</i>
-        </p> 
+        </p>  -->
 
 
-        <!-- <h2>Welcome to Plan Page</h2>
-        <small>Click the image to go to the main board</small> -->
+        <h2>Welcome to Plan Page</h2>
+        <small>Click the image to go to the main board</small> 
 
-        <!-- <section id="current">
+        <section id="current">
             <h2></h2>
             <article>
-                <h2>from-DIAMOND-to-TOTA</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/1Diamond">
-                    <img src="https://i.postimg.cc/6QJbfNM1/diamond-to-tota.png">
+                <h2>from TOTA Board</h2>
+                <a href="https://vlb.hologutibusinesscentre.com/GAMES/11Tota">
+                    <img src="https://i.postimg.cc/Mp8Hy2Rt/Post-59-TOTA.png">
                 </a> 
             </article>
 
             <article>
-                <h2>Super-to-Tota</h2>
-                <p>Dislike plan</p>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/10Super">
-                    <img src="https://i.postimg.cc/cLfkzs4Y/super-to-tota.png">
+                <h2>from  Vag Board</h2>
+                <a href="https://vlb.hologutibusinesscentre.com/GAMES/13Vag">
+                    <img src="https://i.postimg.cc/vTBSxPLb/Post-59-VAG.png">
                 </a> 
-                <p>Here, the number behinde 50 (9) counter</p>
             </article> 
 
             <article>
-                <h2>from-VAG-to-tota</h2>
-                <a href="https://vlb.hologutibusinesscentre.com/GAMES/13Vag.html">
-                    <img src="https://i.postimg.cc/W3nfpjdK/vag-to-tota.png">
+                <h2>from Royal Board</h2>
+                <a href="https://vlb.hologutibusinesscentre.com/GAMES/17Royal.html">
+                    <img src="https://i.postimg.cc/SshN79Jn/Post-59-ROYAL.png">
                 </a>
             </article>
             
@@ -277,7 +275,7 @@
 
             <p>Let's have it. Drop it on any of the social media post down below</p>
     
-        </section>  -->
+        </section> 
 
         <hr>
 
@@ -306,10 +304,10 @@
         </section> -->
     </main>
     <footer>
-        <a href="https://twitter.com/visuaLottoBoard/status/1760145248796483770" target="_blank">
+        <a href="" target="_blank">
             <i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i>
         </a>
-        <a href="https://web.facebook.com/visuaLottoBoard/posts/pfbid02FzwzNiuMS1tchKPQ653MLAAsQ3kMLWBxC7aAVozwPUoUMBEB1GKY8sygWVE4p7hTl" target="_blank">
+        <a href="" target="_blank">
             <i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i>
         </a>
         <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
