--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 16/3/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">39 - 62 - 69 - 87 - 7</p>
-                <p class="machine">25 - 28 - 50 - 64 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">90 - 55 - 18 - 6 - 31</p>
-                <p class="machine">77 - 89 - 59 - 48 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">75 - 86 - 19 - 34 - 41</p>
-                <p class="machine">74 - 10 - 84 - 20 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">35 - 5 - 40 - 02 - 44</p>
-                <p class="machine">55 - 71 - 51 - 38 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">17 - 82 - 65 - 6 - 85</p>
-                <p class="machine">66 - 53 - 13 - 68 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">38 - 33 - 78 - 80 - 81</p>
-                <p class="machine">65 - 77 - 75 - 40 - 83</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 17/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">30 - 27 - 36 - 5 - 24</p>
                 <p class="machine">16 - 81 - 65 - 82 - 17</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 18/3/2024</h2>
+            <article>
+                <h3 class="game">diamond</h3>
+                <p class="winning">66 - 44 - 2 - 68 - 69</p>
+                <p class="machine">63 - 43 - 74 - 81 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">28 - 43 - 40 - 62 - 56</p>
+                <p class="machine">6 - 4 - 44 - 29 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">33 - 59 - 40 - 73 - 15</p>
+                <p class="machine">21 - 16 - 37 - 22 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">65 - 16 - 56 - 62 - 6</p>
+                <p class="machine">85 - 79 - 46 - 78 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">64 - 49 - 15 - 83 - 9</p>
+                <p class="machine">76 - 58 - 37 - 72 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">19 - 28 - 7 - 57 - 76</p>
+                <p class="machine">18 - 58 - 43 - 1 - 54</p>        
             </article>
         </section>
     </div>
