--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 17/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">64 - 80 - 56 - 6 - 12</p>
-                <p class="machine">37 - 74 - 20 - 36 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">50 - 87 - 69 - 63 - 71</p>
-                <p class="machine">54 - 66 - 57 - 84 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">55 - 45 - 35 - 20 - 53</p>
-                <p class="machine">75 - 24 - 60 - 32 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">45 - 80 - 21 - 66 - 81</p>
-                <p class="machine">5 - 54 - 72 - 28 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">12 - 71 - 9 - 60 - 49</p>
-                <p class="machine">53 - 68 - 90 - 23 - 61 </p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">30 - 27 - 36 - 5 - 24</p>
-                <p class="machine">16 - 81 - 65 - 82 - 17</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 18/3/2024</h2>
             <article>
                 <h3 class="game">diamond</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">19 - 28 - 7 - 57 - 76</p>
                 <p class="machine">18 - 58 - 43 - 1 - 54</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 19/3/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">12 - 55 - 54 - 43 - 84</p>
+                <p class="machine">62 - 51 - 23 - 83 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">85 - 45 - 13 - 8 - 71</p>
+                <p class="machine">38 - 2 - 24 - 19 - 07</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">40 - 49 - 58 - 85 - 1</p>
+                <p class="machine">77 - 42 - 23 - 62 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">20 - 50 - 44 - 73 - 49</p>
+                <p class="machine">82 - 79 - 34 - 21 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky G</h3>
+                <p class="winning">73 - 82 - 85 - 29 - 47</p>
+                <p class="machine">64 - 30 - 74 - 56 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">68 - 18 - 41 - 26 - 67</p>
+                <p class="machine">78 - 37 - 40 - 38 - 86</p>        
             </article>
         </section>
     </div>
