--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 18/3/2024</h2>
-            <article>
-                <h3 class="game">diamond</h3>
-                <p class="winning">66 - 44 - 2 - 68 - 69</p>
-                <p class="machine">63 - 43 - 74 - 81 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">28 - 43 - 40 - 62 - 56</p>
-                <p class="machine">6 - 4 - 44 - 29 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">33 - 59 - 40 - 73 - 15</p>
-                <p class="machine">21 - 16 - 37 - 22 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">65 - 16 - 56 - 62 - 6</p>
-                <p class="machine">85 - 79 - 46 - 78 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">64 - 49 - 15 - 83 - 9</p>
-                <p class="machine">76 - 58 - 37 - 72 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">19 - 28 - 7 - 57 - 76</p>
-                <p class="machine">18 - 58 - 43 - 1 - 54</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 19/3/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">68 - 18 - 41 - 26 - 67</p>
                 <p class="machine">78 - 37 - 40 - 38 - 86</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 20/3/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">81 - 3 - 29 - 63 - 67</p>
+                <p class="machine">44 - 5 - 80 - 12 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">56 - 34 - 87 - 55 - 68</p>
+                <p class="machine">5 - 52 - 73 - 59 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">9 - 1 - 54 - 2 - 68</p>
+                <p class="machine">14 - 87 - 71 - 50 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">50 - 9 - 24 - 48 - 81</p>
+                <p class="machine">3 - 46 - 62 - 34 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">24 - 21 - 48 - 13 - 4</p>
+                <p class="machine">80 - 6 - 59 - 61 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">2 - 33 - 23 - 21 - 28</p>
+                <p class="machine">25 - 64 - 39 - 70 - 37</p>        
             </article>
         </section>
     </div>
