--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 19/3/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">12 - 55 - 54 - 43 - 84</p>
-                <p class="machine">62 - 51 - 23 - 83 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">85 - 45 - 13 - 8 - 71</p>
-                <p class="machine">38 - 2 - 24 - 19 - 07</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">40 - 49 - 58 - 85 - 1</p>
-                <p class="machine">77 - 42 - 23 - 62 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">20 - 50 - 44 - 73 - 49</p>
-                <p class="machine">82 - 79 - 34 - 21 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p class="winning">73 - 82 - 85 - 29 - 47</p>
-                <p class="machine">64 - 30 - 74 - 56 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">68 - 18 - 41 - 26 - 67</p>
-                <p class="machine">78 - 37 - 40 - 38 - 86</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 20/3/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">2 - 33 - 23 - 21 - 28</p>
                 <p class="machine">25 - 64 - 39 - 70 - 37</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 21/3/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">43 - 56 - 84 - 79 - 9</p>
+                <p class="machine">44 - 81 - 54 - 52 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">fair Chance</h3>
+                <p class="winning">23 - 14 - 72 - 9 - 52</p>
+                <p class="machine">50 - 69 - 13 - 61 - 39</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">34 - 61 - 26 - 76 - 11</p>
+                <p class="machine">20 - 9 - 14 - 25 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">67 - 44 - 90 - 83 - 23</p>
+                <p class="machine">57 - 65 - 24 - 20 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">24 - 66 - 3 - 18 - 61</p>
+                <p class="machine">62 - 27 - 68 - 89 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">71 - 53 - 51 - 10 - 75</p>
+                <p class="machine">82 - 89 - 5 - 41 - 54</p>        
             </article>
         </section>
     </div>
