--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 20/3/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">81 - 3 - 29 - 63 - 67</p>
-                <p class="machine">44 - 5 - 80 - 12 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">56 - 34 - 87 - 55 - 68</p>
-                <p class="machine">5 - 52 - 73 - 59 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">9 - 1 - 54 - 2 - 68</p>
-                <p class="machine">14 - 87 - 71 - 50 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">50 - 9 - 24 - 48 - 81</p>
-                <p class="machine">3 - 46 - 62 - 34 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">24 - 21 - 48 - 13 - 4</p>
-                <p class="machine">80 - 6 - 59 - 61 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">2 - 33 - 23 - 21 - 28</p>
-                <p class="machine">25 - 64 - 39 - 70 - 37</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 21/3/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">71 - 53 - 51 - 10 - 75</p>
                 <p class="machine">82 - 89 - 5 - 41 - 54</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 22/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">64 - 67 - 23 - 41 - 51</p>
+                <p class="machine">78 - 43 - 47 - 82 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">31 - 45 - 61 - 7 - 53</p>
+                <p class="machine">17 - 18 - 11 - 71 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">61 - 57 - 52 - 66 - 4</p>
+                <p class="machine">2 - 14 - 33 - 89 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">37 - 84 - 70 - 87 - 29</p>
+                <p class="machine">56 - 3 - 88 - 18 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">82 - 83 - 65 - 72 - 41</p>
+                <p class="machine">12 - 76 - 29 - 90 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">73 - 11 - 87 - 36 - 13</p>
+                <p class="machine">30 - 15 - 69 - 3 - 31</p>        
             </article>
         </section>
     </div>
