--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 21/3/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">43 - 56 - 84 - 79 - 9</p>
-                <p class="machine">44 - 81 - 54 - 52 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">fair Chance</h3>
-                <p class="winning">23 - 14 - 72 - 9 - 52</p>
-                <p class="machine">50 - 69 - 13 - 61 - 39</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">34 - 61 - 26 - 76 - 11</p>
-                <p class="machine">20 - 9 - 14 - 25 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">67 - 44 - 90 - 83 - 23</p>
-                <p class="machine">57 - 65 - 24 - 20 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">24 - 66 - 3 - 18 - 61</p>
-                <p class="machine">62 - 27 - 68 - 89 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">71 - 53 - 51 - 10 - 75</p>
-                <p class="machine">82 - 89 - 5 - 41 - 54</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 22/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">73 - 11 - 87 - 36 - 13</p>
                 <p class="machine">30 - 15 - 69 - 3 - 31</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 23/03/2024</h2>
+            <article>
+                <h3 class="game">Premier</h3>
+                <p class="winning">21 - 10 - 61 - 77 - 7</p>
+                <p class="machine">5 - 24 - 80 - 2 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">61 - 69 - 70 - 89 - 43</p>
+                <p class="machine">18 - 62 - 54 - 4 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">29 - 74 - 70 - 52 - 54</p>
+                <p class="machine">18 - 8 - 66 - 71 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">54 - 3 - 49 - 36 - 8</p>
+                <p class="machine">43 - 6 - 59 - 87 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">46 - 1 - 84 - 73 - 40</p>
+                <p class="machine">68 - 85 - 81 - 55 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">4 - 2 - 88 - 63 - 46</p>
+                <p class="machine">32 - 23 - 58 - 85 - 35</p>        
             </article>
         </section>
     </div>
